# libserial

./: .gitignore  .vimrc  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  COPYING.LESSER  ChangeLog  INSTALL  LICENSE.txt  Makefile.am  README  README.md  api_documentation.html  build-gtest.sh  compile.sh  configure.ac  configure.in  description.html  design_documentation.html  download.html  doxygen.conf.in  feature_summary.html  genindex.html  gtest.sh  index.html  install.html  libserial.pc.in  libserial.spec.in  links.html  objects.inv  params.json  search.html  searchindex.js  sync_docs.sh  tutorial.html
_sources/: install.txt
branches/pagey/libserial/: AUTHORS  aclocal.m4  doxygen.conf.in
branches/pagey/libserial/src/: SerialStream.C  SerialStream.h
doc/: Makefile.am  UserManual.dsl
doc/user_manual/: design_documentation.rst  feature_summary.rst  tutorial.rst
dockerfiles/centos/7/: Dockerfile
dockerfiles/debian/buster/: Dockerfile
dockerfiles/ubuntu/16.04/: Dockerfile
dockerfiles/ubuntu/18.04/: Dockerfile
docs/: .cvsignore  MAINPAGE.md  Makefile.am
docs/UML/: libserial_class_diagram.dia
docs/user_manual/: Makefile.am  api_documentation.rst  conf.py  description.rst  design_documentation.rst  download.rst  feature_summary.rst  index.rst  install.rst  links.rst  tutorial.rst
examples/: CMakeLists.txt  Makefile.am  TestFile.txt  main_page_example.cpp  read_port.cpp  read_port_01.cpp  serial_port_read.cpp  serial_port_read_write.cpp  serial_port_write.cpp  serial_stream_read.cpp  serial_stream_read_write.cpp  serial_stream_write.cpp  write_port.cpp
examples/example_project/: CMakeLists.txt  compile.sh  example_project.cpp
libserial/: .cvsignore  ChangeLog  Makefile.am  aclocal.m4  configure.in  libserial.pc
libserial/examples/: Makefile.am  read_port.cpp  write_port.cpp
libserial/src/: Makefile.am  PosixSignalDispatcher.cpp  PosixSignalDispatcher.h  SerialPort.cpp  SerialPort.h  SerialStream.cc  SerialStream.h  SerialStreamBuf.cc  SerialStreamBuf.h
libserial_0_6_0rc1/: configure.in  libserial.spec.in
libserial_0_6_0rc1/examples/: Makefile.am  write_port.cpp
libserial_0_6_0rc1/sip/: send_test.py  test_control_lines.py
libserial_0_6_0rc1/src/: PosixSignalDispatcher.cpp  SerialPort.h
packaging/: CMakeLists.txt  package_desc.txt
sip/: CMakeLists.txt  Makefile.am  SerialPort.sip  SerialPortConstants.sip  configure.py  configure.py.in  exception.sip  iosbase.sip  libserial.sip  recv_test.py  send_test.py  stdexcept.sip  string.sip  test_control_lines.py  vector.sip
src/: .cvsignore  CMakeLists.txt  Makefile.am  PosixSignalDispatcher.cpp  PosixSignalDispatcher.h  PosixSignalHandler.h  SerialPort.cpp  SerialPort.h  SerialPortConstants.h  SerialStream.cc  SerialStream.cpp  SerialStream.h  SerialStreamBuf.cc  SerialStreamBuf.cpp  SerialStreamBuf.h
src/libserial/: Makefile.am  SerialPort.h  SerialPortConstants.h  SerialStream.h  SerialStreamBuf.h
tags/initial/libserial/: Makefile.am  config.h.in
tags/initial/libserial/src/: Makefile.am
tags/libserial-0-5-2/libserial/: .cvsignore
tags/libserial-0-5-2/libserial/src/: PosixSignalDispatcher.cpp  PosixSignalDispatcher.h  SerialStream.h  SerialStreamBuf.h
tags/libserial-0_4_0/libserial/: AUTHORS  mkinstalldirs
tags/libserial-0_4_0/libserial/examples/: read_port.cpp
tags/libserial-0_4_0/libserial/src/: PosixSignalHandler.h  SerialPort.cpp  SerialStream.cc  SerialStream.h  SerialStreamBuf.h
tags/libserial_0_5_0/libserial/: Makefile.am  config.h.in  ltmain.sh
tags/libserial_0_5_0/libserial/doc/: Makefile.am
tags/libserial_0_5_0/libserial/src/: PosixSignalDispatcher.cpp  SerialPort.h  SerialStream.h  SerialStreamBuf.cc
tags/libserial_0_6_0rc1/: configure.in
tags/libserial_0_6_0rc1/examples/: read_port.cpp
tags/libserial_0_6_0rc1/sip/: Makefile.am  recv_test.py  stdexcept.sip
test/: CMakeLists.txt  LibSerialTest.cpp  LibSerialTests.cpp  MakeFile.am  Makefile.am  MultiThreadUnitTests.cpp  MultiThreadUnitTests.h  SerialPortUnitTests.cpp  SerialPortUnitTests.h  SerialStreamUnitTests.cpp  SerialStreamUnitTests.h  UnitTests.cpp  UnitTests.h  unit_tests.cpp
trunk/: AUTHORS  Makefile.am  Makefile.dist  README  configure.in  doxygen.conf.in  libserial.pc  libserial.pc.in
trunk/doc/: Makefile.am  UserManual.sgml  UserManual.xml
trunk/doc/user_manual/: conf.py  index.rst  tutorial.rst
trunk/examples/: Makefile.am  read_port.cpp
trunk/libserial/: .cvsignore  Makefile.am  README  config.h.in  configure.in  doxygen.conf.in
trunk/libserial/doc/: Makefile.am
trunk/libserial/examples/: .cvsignore  Makefile.am  read_port.cpp
trunk/libserial/src/: PosixSignalDispatcher.cpp  PosixSignalDispatcher.h  SerialPort.cpp  SerialPort.h  SerialStream.C  SerialStream.cc  SerialStream.h  SerialStreamBuf.cc  SerialStreamBuf.h
trunk/libserial_0_6_0rc1/sip/: vector.sip
trunk/libserial_0_6_0rc1/src/: Makefile.am  SerialStreamBuf.cc  SerialStreamBuf.h
trunk/sip/: Makefile.am  configure.py  exception.sip  libserial.sip  recv_test.py  send_test.py  string.sip
trunk/src/: Makefile.am  PosixSignalDispatcher.cpp  PosixSignalHandler.h  SerialPort.cpp  SerialPort.h  SerialStream.cc  SerialStream.h  SerialStreamBuf.cc  SerialStreamBuf.h  unit_tests.cpp
