AM_CXXFLAGS = -Weffc++

AM_CPPFLAGS = -I@top_srcdir@/src

lib_LTLIBRARIES = libserial.la

include_HEADERS = \
	SerialPort.h \
	SerialPortConstants.h \
	SerialStream.h \
	SerialStreamBuf.h

libserial_la_SOURCES = \
	SerialPort.cpp \
	SerialPort.h \
	SerialPortConstants.h \
	SerialStream.cpp \
	SerialStream.h \
	SerialStreamBuf.cpp \
	SerialStreamBuf.h
