AM_CXXFLAGS = -Weffc++

AM_CPPFLAGS = -I@top_srcdir@/src

lib_LTLIBRARIES = libserial.la

include_HEADERS = \
	libserial/SerialPort.h \
	libserial/SerialPortConstants.h \
	libserial/SerialStream.h \
	libserial/SerialStreamBuf.h

libserial_la_SOURCES = \
	SerialPort.cpp \
	SerialStream.cpp \
	SerialStreamBuf.cpp \
	libserial/SerialPort.h \
	libserial/SerialPortConstants.h \
	libserial/SerialStream.h \
	libserial/SerialStreamBuf.h
