AC_REVISION($Revision: 1.2 $)
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/SerialStream.C)

AM_CONFIG_HEADER(config.h)

dnl
dnl Indicate the package name and the version to automake
dnl
dnl $Id: configure.in,v 1.2 2002-11-08 19:38:13 pagey Exp $
AM_INIT_AUTOMAKE(libserial, 0.2)

AM_MAINTAINER_MODE

dnl Checks for programs.
AC_ISC_POSIX
AC_PROG_YACC
AC_PROG_CC
AC_PROG_CXX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LEX
AC_PROG_INSTALL
AM_PROG_LIBTOOL

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, fabs)
dnl Replace `main' with a function in -lnsl:
AC_CHECK_LIB(nsl, main)
dnl Replace `main' with a function in -lsocket:
AC_CHECK_LIB(socket, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(STLDIR)

AC_OUTPUT([./Makefile
./doxygen.conf
./doc/UML/Makefile
./doc/Makefile
./src/Makefile])
