AC_REVISION($Revision: 1.10 $)
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/SerialStream.cc)

AM_CONFIG_HEADER(config.h)

dnl
dnl Indicate the package name and the version to automake
dnl
dnl $Id: configure.in,v 1.10 2005-09-19 07:21:05 crayzeewulf Exp $
AM_INIT_AUTOMAKE(libserial, 0.5.0)

AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

dnl Checks for header files.
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE


AC_OUTPUT([./Makefile
./doxygen.conf
./doc/UML/Makefile
./doc/Makefile
./examples/Makefile
./src/Makefile])
